# sundialClion

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
application/: cv_heat2D.cpp
vcpkg/overlay-triplets/: x64-linux-mixed.cmake
